// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routeBuilderPluginV2 > Generated Routes Snapshots > should generate correct routes for mixed sync and async files > mixed-routes-structure 1`] = `
"// This file is auto-generated by vite-plugin-route-builder
// Do not edit manually
/* eslint-disable */
// @ts-nocheck

import type { RouteObject } from "react-router"

// Imports for page components
import * as SyncComponent0 from ".//project/src/pages/about.sync"
import * as SyncComponent1 from ".//project/src/pages/dashboard/admin.sync"
import * as SyncComponent2 from ".//project/src/pages/settings/profile.sync"
const lazy0 = () => import(".//project/src/pages/blog/[id]")
const lazy1 = () => import(".//project/src/pages/settings/layout")
const lazy2 = () => import(".//project/src/pages/index")

// Generated route configuration
export const routes: RouteObject[] = [
  {
    "path": "about",
    "Component": SyncComponent0.Component,
    "loader": SyncComponent0.loader
  },
  {
    "path": "blog",
    "children": [
      {
        "path": ":id",
        "lazy": lazy0
      }
    ]
  },
  {
    "path": "dashboard",
    "children": [
      {
        "path": "admin",
        "Component": SyncComponent1.Component,
        "loader": SyncComponent1.loader
      }
    ]
  },
  {
    "path": "settings",
    "children": [
      {
        "path": "",
        "lazy": lazy1,
        "children": [
          {
            "path": "profile",
            "Component": SyncComponent2.Component,
            "loader": SyncComponent2.loader
          }
        ]
      }
    ]
  },
  {
    "path": "",
    "lazy": lazy2
  }
]

export default routes
"
`;

exports[`routeBuilderPluginV2 > Generated Routes Snapshots > should generate correct routes for only async files > async-only-routes 1`] = `
"// This file is auto-generated by vite-plugin-route-builder
// Do not edit manually
/* eslint-disable */
// @ts-nocheck

import type { RouteObject } from "react-router"

// Imports for page components
const lazy0 = () => import(".//project/src/pages/about")
const lazy1 = () => import(".//project/src/pages/blog/[slug]")
const lazy2 = () => import(".//project/src/pages/contact")
const lazy3 = () => import(".//project/src/pages/index")

// Generated route configuration
export const routes: RouteObject[] = [
  {
    "path": "about",
    "lazy": lazy0
  },
  {
    "path": "blog",
    "children": [
      {
        "path": ":slug",
        "lazy": lazy1
      }
    ]
  },
  {
    "path": "contact",
    "lazy": lazy2
  },
  {
    "path": "",
    "lazy": lazy3
  }
]

export default routes
"
`;

exports[`routeBuilderPluginV2 > Generated Routes Snapshots > should generate correct routes for only sync files > sync-only-routes 1`] = `
"// This file is auto-generated by vite-plugin-route-builder
// Do not edit manually
/* eslint-disable */
// @ts-nocheck

import type { RouteObject } from "react-router"

// Imports for page components
import * as SyncComponent0 from ".//project/src/pages/critical.sync"
import * as SyncComponent1 from ".//project/src/pages/important.sync"
import * as SyncComponent2 from ".//project/src/pages/settings/config.sync"

// Generated route configuration
export const routes: RouteObject[] = [
  {
    "path": "critical",
    "Component": SyncComponent0.Component,
    "loader": SyncComponent0.loader
  },
  {
    "path": "important",
    "Component": SyncComponent1.Component,
    "loader": SyncComponent1.loader
  },
  {
    "path": "settings",
    "children": [
      {
        "path": "config",
        "Component": SyncComponent2.Component,
        "loader": SyncComponent2.loader
      }
    ]
  }
]

export default routes
"
`;

exports[`routeBuilderPluginV2 > Generated Routes Snapshots > should generate correct routes with custom transformPath > custom-transform-routes 1`] = `
"// This file is auto-generated by vite-plugin-route-builder
// Do not edit manually
/* eslint-disable */
// @ts-nocheck

import type { RouteObject } from "react-router"

// Imports for page components


// Generated route configuration
export const routes: RouteObject[] = [
  {
    "path": "",
    "children": [
      {
        "path": "demo"
      },
      {
        "path": "test"
      }
    ]
  }
]

export default routes
"
`;

exports[`routeBuilderPluginV2 > Generated Routes Snapshots > should generate empty routes array when no files found > empty-routes 1`] = `
"// This file is auto-generated by vite-plugin-route-builder
// Do not edit manually
/* eslint-disable */
// @ts-nocheck

import type { RouteObject } from "react-router"

// Imports for page components


// Generated route configuration
export const routes: RouteObject[] = []

export default routes
"
`;

exports[`routeBuilderPluginV2 > should generate correct import statements for sync files > sync-and-async-routes 1`] = `
"// This file is auto-generated by vite-plugin-route-builder
// Do not edit manually
/* eslint-disable */
// @ts-nocheck

import type { RouteObject } from "react-router"

// Imports for page components
import * as SyncComponent0 from ".//project/src/pages/critical.sync"
const lazy0 = () => import(".//project/src/pages/normal")

// Generated route configuration
export const routes: RouteObject[] = [
  {
    "path": "critical",
    "Component": SyncComponent0.Component,
    "loader": SyncComponent0.loader
  },
  {
    "path": "normal",
    "lazy": lazy0
  }
]

export default routes
"
`;
